edit font and chang color of paragraph

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Hind', sans-serif !important;
 }
 
 @layer utilities {
@@ -42,7 +42,7 @@ flex-shrink: 0;
 border-radius: 50px;
 background: #05297F;
 color: #FFF;
-font-family: Hind;
+font-family:"Hind, sans-serif"!important;
 font-size: 18px;
 font-style: normal;
 font-weight: 400;
@@ -59,4 +59,4 @@ line-height: 18px; /* 100% */
   background-color: #FC9D9D !important;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600;700&display=swap');
